Added BigDecimal and Double functionality Double tests works